--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -23,3 +24,8 @@ yarn-debug.log*
 yarn-error.log*
 
 package-lock.json
+
+#firebase
+.firebase
+.firebaserc
+firebase.json
